# TFG

./: .gitignore  CMakeLists.txt  LICENSE  README.md  notes.md  run.sh  setup.sh  zip.sh
architecture/: RISC-V.json
architectures/: RISC-V.json
doc/: architecture.md  research_notes.md  schedule.md
examples/: demo.riscv  tmp.riscv
presentation/: .gitignore  README.md  presentation.md
presentation/img/: .gitignore  diagrams.md  gantt.tex
report/: .gitignore  README.md  SRS.sty  glossary.tex  mymacros.sty  output.xmpdata  references.bib  report.tex  uc3mthesisIEEE.cls
report/img/: .gitignore  component_diagram.drawio  interpreter_architecture.drawio
report/parts/: 0-cover.tex  1-introduction.tex  3-design.tex  6-future_work.tex  abstract.tex  acknowledgements.tex  analysis.tex  conclusions.tex  dedication.tex  design.tex  epigraph.tex  evaluation.tex  example.tex  glossary.tex  implementation.tex  introduction.tex  manual.tex  plan.tex  planning.tex  regulation.tex  state_of_the_art.tex  validation.tex
report/parts/thesis/: 1-introduction.tex  2-state_of_the_art.tex  5-planning.tex  example.tex
src/: CMakeLists.txt  exceptions.hpp  main.cpp
src/compiler/: CMakeLists.txt  compiler.cpp  compiler.hpp
src/cpu/: CMakeLists.txt  alu.cpp  alu.hpp  interpreter.hpp  register_file.hpp
src/cpu/control_unit/: ast.cpp  ast.hpp  control_unit.cpp  control_unit.hpp  reader.hpp
src/cpu/interpreter/: LUISP_DA.g4  ast.cpp  ast.hpp  interpreter.cpp  interpreter.hpp  reader.cpp  reader.hpp
src/exceptions/: CMakeLists.txt  exceptions.hpp
src/lib/: CMakeLists.txt  string_manipulation.cpp  string_manipulation.hpp
src/memory/: CMakeLists.txt  data.cpp  data.hpp  text.cpp  text.hpp
src/parser/: riscv_asm.g4
src/register_file/: register_file.cpp  register_file.hpp
test/: CMakeLists.txt  main.cpp
